--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -73,7 +73,7 @@
   margin-bottom: 6px;
   height: 45px;
   color: #fff;
-  background-color: #000;
+  background-color:#4285F4;
   border: none;
   border-radius: 3px;
 }
