--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', ‘Arial’, sans-serif;
   font-style: normal;
   color: #FFFFFF;
 }
