--- a/src/components/Entrance/Entrance.css
+++ b/src/components/Entrance/Entrance.css
@@ -111,6 +111,7 @@
   line-height: 17px;
   text-align: center;
   color: #A0A0A0;
+  margin-bottom: 20px;
 }
 
 .entrance__link {
@@ -119,6 +120,7 @@
   font-size: 14px;
   line-height: 17px;
   color: #4285F4;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 768px) {
